--- a/Ecommerce/Ecommerce/appsettings.json
+++ b/Ecommerce/Ecommerce/appsettings.json
@@ -7,6 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-CGIG7EJ2\\SQLSERVER2014;Initial Catalog=HaHaHo.Ecommerce;Integrated Security=True"
-  }
+    "DefaultConnection": "Data Source=DESKTOP-PE5VQMI\\SQLEXPRESS;Initial Catalog=Ecommerce;Integrated Security=True"
+  },
+
+  "AuthSettings": {
+    "Key": "this is a secret key",
+    "Audience": "https://localhost:7229",
+    "Issuer": "https://localhost:7229"
+  },
+  "MailSettings": {
+    "Mail": "cuongcamauit@gmail.com",
+    "DisplayName": "Black&Blue Company",
+    "Password": "ehnggcdqgffqlwyg",
+    "Host": "smtp.gmail.com",
+    "Port": 465
+  },
+  "AppUrl": "https://localhost:7229"
 }
