--- a/Ecommerce/Ecommerce/appsettings.json
+++ b/Ecommerce/Ecommerce/appsettings.json
@@ -17,9 +17,9 @@
     "Issuer": "https://localhost:7229"
   },
   "MailSettings": {
-    "Mail": "lqbao240101@gmail.com",
-    "DisplayName": "LEQUOCBAO",
-    "Password": "lmnnfcqyharoiase",
+    "Mail": "TÀI KHOẢN MAIL",
+    "DisplayName": "TÊN NGƯỜI GỬI",
+    "Password": "MẬT KHẨU",
     "Host": "smtp.gmail.com",
     "Port": 465
   },
