--- a/Ecommerce/Ecommerce/appsettings.json
+++ b/Ecommerce/Ecommerce/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-CGIG7EJ2\\SQLSERVER2014;Initial Catalog=Ecommerce;Integrated Security=True"
+    //"DefaultConnection": "Data Source=LAPTOP-CGIG7EJ2\\SQLSERVER2014;Initial Catalog=Ecommerce;Integrated Security=True",
+    "DefaultConnection": "Data Source=DESKTOP-PE5VQMI\\SQLEXPRESS;Initial Catalog=Ecommerce;Integrated Security=True"
   },
 
   "AuthSettings": {
@@ -16,9 +17,9 @@
     "Issuer": "https://localhost:7229"
   },
   "MailSettings": {
-    "Mail": "TÀI KHOẢN MAIL",
-    "DisplayName": "TÊN NGƯỜI GỬI",
-    "Password": "MẬT KHẨU",
+    "Mail": "cuongcamauit@gmail.com",
+    "DisplayName": "Black&Blue",
+    "Password": "",
     "Host": "smtp.gmail.com",
     "Port": 465
   },
