--- a/Ecommerce/Ecommerce/appsettings.json
+++ b/Ecommerce/Ecommerce/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=LAPTOP-CGIG7EJ2\\SQLSERVER2014;Initial Catalog=Ecommerce;Integrated Security=True",
-    "DefaultConnection": "Data Source=DESKTOP-PE5VQMI\\SQLEXPRESS;Initial Catalog=Ecommerce;Integrated Security=True"
+    "DefaultConnection": "Data Source=LAPTOP-CGIG7EJ2\\SQLSERVER2014;Initial Catalog=Ecommerce;Integrated Security=True",
+    //"DefaultConnection": "Data Source=DESKTOP-PE5VQMI\\SQLEXPRESS;Initial Catalog=Ecommerce;Integrated Security=True"
   },
 
   "AuthSettings": {
@@ -17,8 +17,8 @@
     "Issuer": "https://localhost:7229"
   },
   "MailSettings": {
-    "Mail": "cuongcamauit@gmail.com",
-    "DisplayName": "Black&Blue",
+    "Mail": "lqbao240101@gmail.com",
+    "DisplayName": "Juki",
     "Password": "",
     "Host": "smtp.gmail.com",
     "Port": 465
